    edges of an SCC: edges_of() and inner_edges_of().

  - spot::scc_info can now be passed a filter function to ignore
    or cut some edges.

  - spot::scc_info now keeps track of acceptance sets that are common
    to all edges in an SCC.  These can be retrieved using
    scc_info::common_sets_of(scc), and they are used by scc_info to
    classify some SCCs as rejecting more easily.

  Python:

  - The 'spot.gen' package exports the functions from libspotgen.
    See https://spot.lrde.epita.fr/ipynb/gen.html for examples.

  - twa_graph::copy_state_names_from() can be used to copy the state
    names from another automaton, honoring "original-states" if
    present.

  Bugs fixed:

  - We have fixed new cases where translating multiple formula in a
    single ltl2tgba run could produce automata different from those
    produced by individual runs.

  - The print_dot() function had a couple of issues when printing
    alternating automata: in particular, when using flag 's' (display
    SCC) or 'y' (split universal destination by colors) universal
    edges could be connected to undefined states.

  Backward-incompatible changes:

  - spot::acc_cond::mark_t::operator bool() has been marked as
    explicit.  The implicit converion to bool (and, via bool, to int)
    was a source of bugs.

  - spot::twa_graph::set_init_state(const state*) has been removed.
    It was never used.  You always want to use
    spot::twa_graph::set_init_state(unsigned) in practice.

  - The previous implementation of spot::is_deterministic() has been
    renamed to spot::is_universal().  The new version of
    spot::is_deterministic() requires the automaton to be both
    universal and existential.  This should not make any difference in
    existing code unless you work with the recently added support for
    alternating automata.

  - spot::acc_cond::mark_t::sets() now returns an internal iterable
    object instead of an std::vector<unsigned>.

  Deprecation notice:
