@@ -63,6 +63,7 @@ twaalgos_HEADERS = \
   postproc.hh \
   powerset.hh \
   product.hh \
+  propagate.hh \
   randomgraph.hh \
   randomize.hh \
   reachiter.hh \
@@ -124,6 +125,7 @@ libtwaalgos_la_SOURCES = \
   postproc.cc \
   powerset.cc \
   product.cc \
+  propagate.cc \
   randomgraph.cc \
   randomize.cc \
   reachiter.cc \
