@@ -93,6 +93,11 @@ New in spot 2.3.4.dev (not yet released)
     scc_info::common_sets_of(scc), and they are used by scc_info to
     classify some SCCs as rejecting more easily.
 
+  - a new function spot::propagate_acc() propagates acceptance marks
+    that appear on all incoming or all outgoing transitions of the
+    state. Marks are not propagated across SCCs.
+    This is expected to make things simpler for the simulation.
+
   Python:
 
   - The 'spot.gen' package exports the functions from libspotgen.
